update submit link

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@ body {
 <p>if there is no named corpse, or no corpse at all, include the smob name somewhere with the log of <code>get all</code></p>
 <p>check out collected data <a href="/static/smobs.txt">smobs.txt</a> (might be a large file)</p>
 
-<form action="/" method="post">
+<form action="/submit" method="post">
 <p><textarea autofocus name="smob" rows="32" cols="120" onkeydown="ctrl_enter(event);"></textarea></p>
 <p><button id="submit_button">submit</button><br>
 <small>or hit ctrl+enter</small></p>
