--- a/templates/submit_error.html
+++ b/templates/submit_error.html
@@ -5,12 +5,12 @@
 <title>smobs</title>
 <style type="text/css">
 body {
-text-align: center;
+	text-align: center;
 }
 </style>
 </head>
 <body>
-<p>your data has been submitted</p>
+<p>there was an error with your datas</p>
 <p><a href="/">back to the main page</a></p>
 
 </body>
