--- a/templates/index.html
+++ b/templates/index.html
@@ -19,9 +19,9 @@ body {
 <body>
 <h1>smob database submission</h1>
 <p>use this form to submit smob data</p>
-<p>paste the log of <code>get all corpse</code></p>
-<p>if there is no named corpse, or no corpse at all, include the smob name somewhere with the log of <code>get all</code></p>
-<p>be sure to include the stuff you get from a pack or other container, or off the ground</p>
+<p>paste the log of <code>get all corpse</code><br>
+if there is no named corpse, or no corpse at all, include the smob name somewhere with the log of <code>get all</code><br>
+be sure to include the stuff you get from a pack or other container, or off the ground</p>
 
 <form action="/submit" method="post">
 <p><textarea autofocus name="smob" rows="32" cols="120" onkeydown="ctrl_enter(event);"></textarea></p>
