change page titles

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>smobs</title>
+<title>smob database</title>
 </head>
 <body>
 <h1>smob database</h1>
