--- a/templates/smob.html
+++ b/templates/smob.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>smobs</title>
+<title>{{ smob[1] }}</title>
 </head>
 <body>
 <h1>{{ smob[1] }}</h1>
