--- a/templates/submit.html
+++ b/templates/submit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>smobs</title>
+<title>contribute</title>
 <script>
 function ctrl_enter(e) {
 	if (e.keyCode == 13 && e.ctrlKey) {
