--- a/templates/submitted.html
+++ b/templates/submitted.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>smobs</title>
+<title>contribute</title>
 <style type="text/css">
 body {
 text-align: center;
