add more instruction to submit

--- a/templates/submit.html
+++ b/templates/submit.html
@@ -20,7 +20,7 @@ body {
 <h1>smob database submission</h1>
 <p>use this form to submit smob data</p>
 <p>paste the log of <code>get all corpse</code><br>
-if there is no named corpse, or no corpse at all, include the smob name somewhere with the log of <code>get all</code><br>
+if there is no named corpse, or no corpse at all, include the smob name somewhere <code>smob: a tall thief</code> with the log of <code>get all</code><br>
 be sure to include the stuff you get from a pack or other container, or off the ground</p>
 
 <form action="/submit" method="post">
