--- a/templates/smob.html
+++ b/templates/smob.html
@@ -13,7 +13,7 @@
 <table>
 <tr><th>item</th><th>chance</th></tr>
 {% for item in items %}
-	<tr><td>{{ item[0] }}</td><td>{{ item[1] }}%</td></tr>
+	<tr><td>{{ item[0] }}</td><td>{{ item[1]|round(1) }}%</td></tr>
 {% endfor %}
 </table>
 
