--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!--
+Copyright (C) 2013 Ray Schulz <rascul3@gmail.com>
+This work is free. You can redistribute it and/or modify it under the
+terms of the Do What The Fuck You Want To Public License, Version 2,
+as published by Sam Hocevar. See the COPYING file for more details. 
+-->
+
 <head>
 <meta charset="utf-8">
 <title>smob database</title>
