add link to github

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,5 +23,6 @@ as published by Sam Hocevar. See the COPYING file for more details.
 	<td>{% if smob[3] == True %}Y{% elif smob[3] == False %}N{% endif %}</td>
 {% endfor %}
 </table>
+<p><a href="https://github.com/rascul/smobs">open sores</a></p>
 </body>
 </html>
