add kill count to main page

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,11 +16,12 @@ as published by Sam Hocevar. See the COPYING file for more details.
 <h1>smob database</h1>
 <p><a href="/submit">contribute</a></p>
 <table>
-<tr><th>smob</th><th>stab</th><th>channel</th></tr>
+<tr><th>smob</th><th>stab</th><th>channel</th><th>kills</th></tr>
 {% for smob in smobs %}
 	<tr><td><a href="/smob/{{ smob[0] }}">{{ smob[1] }}</a></td>
 	<td>{% if smob[2] == True %}Y{% elif smob[2] == False %}N{% endif %}</td>
 	<td>{% if smob[3] == True %}Y{% elif smob[3] == False %}N{% endif %}</td>
+	<td>{{ kills[smob[0]] }}</td>
 {% endfor %}
 </table>
 <p><a href="https://github.com/rascul/smobs">open sores</a></p>
