set width for main table

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@ google.setOnLoadCallback(drawSmobTable);
 <body>
 <h1>smob database</h1>
 <p><a href="/submit">contribute</a></p>
-<div id="smob_table"></div>
+<div id="smob_table" style="width: 30em"></div>
 <p><a href="https://github.com/rascul/smobs">open sores</a></p>
 </body>
 </html>
