--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@ function drawSmobTable() {
 	var data = google.visualization.arrayToDataTable([
 	['smob', 'stab', 'channel', 'kills'],
 	{% for smob in smobs %}
-		['<a href="/smob/{{ smob[0] }}">{{ smob[1] }}</a>', '{% if smob[2] == True %}Y{% elif smob[2] == False %}N{% endif %}', '{% if smob[3] == True %}Y{% elif smob[3] == False %}N{% endif %}', {{ kills[smob[0]] }}],
+		['<a href="/smob/{{ smob[0] }}">{{ smob[1] }}</a>', '{% if smob[2] == True %}yes{% elif smob[2] == False %}no{% endif %}', '{% if smob[3] == True %}yes{% elif smob[3] == False %}no{% endif %}', {{ kills[smob[0]] }}],
 	{% endfor %}
 	]);      
 	visualization = new google.visualization.Table(document.getElementById('smob_table'));
@@ -33,7 +33,7 @@ google.setOnLoadCallback(drawSmobTable);
 <body>
 <h1>smob database</h1>
 <p><a href="/submit">contribute</a></p>
-<div id="smob_table" style="width: 30em"></div>
+<div id="smob_table" style="width: 50em"></div>
 <p><a href="https://github.com/rascul/smobs">open sores</a></p>
 </body>
 </html>
