add location column

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,9 @@ as published by Sam Hocevar. See the COPYING file for more details.
 function drawSmobTable() {
 	// Create and populate the data table.
 	var data = google.visualization.arrayToDataTable([
-	['smob', 'shortname', 'stab', 'channel', 'kills'],
+	['smob', 'shortname', 'location', 'stab', 'channel', 'kills'],
 	{% for smob in smobs %}
-		['<a href="/smob/{{ smob[0] }}">{{ smob[1] }}</a>', '{% if smob[4] %}{{ smob[4] }}{% endif %}', '{% if smob[2] == True %}yes{% elif smob[2] == False %}no{% endif %}', '{% if smob[3] %}{{ smob[3] }}{% endif %}', {{ kills[smob[0]] }}],
+		['<a href="/smob/{{ smob[0] }}">{{ smob[1] }}</a>', '{% if smob[4] %}{{ smob[4] }}{% endif %}', '{%if smob[5] %}{{ smob[5] }}{% endif %}', '{% if smob[2] == True %}yes{% elif smob[2] == False %}no{% endif %}', '{% if smob[3] %}{{ smob[3] }}{% endif %}', {{ kills[smob[0]] }}],
 	{% endfor %}
 	]);      
 	visualization = new google.visualization.Table(document.getElementById('smob_table'));
