--- a/templates/submitted.html
+++ b/templates/submitted.html
@@ -19,7 +19,7 @@ text-align: center;
 </head>
 <body>
 <p>your data has been submitted</p>
-<p><a href="/">submit another</a></p>
+<p><a href="/submit">submit another</a></p>
 <p><a href="/">back to the main page</a></p>
 
 </body>
