fix smob links to start with /smobs

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,5 +19,7 @@ as published by Sam Hocevar. See the COPYING file for more details.
 	<li><a href="/smobs">smobs</a></li>
 	<li><a href="/eq">eq</a></li>
 </ul>
+<p><a href="https://github.com/rascul/smobs">open sores</a></p>
+
 </body>
 </html>
