--- a/templates/smob.html
+++ b/templates/smob.html
@@ -45,7 +45,8 @@ google.setOnLoadCallback(drawSmobTable);
 {% if smob[7] %}<p><strong>pick:</strong> {{ smob[7] }}</p>{% endif %}
 
 <div id="smob_table" style="width: 30em"></div>
-<p><a href="/">main page</a></p>
+<p><a href="/smobs">back to smob db</a></p>
+<p><a href="/">back to the main page</a></p>
 
 </body>
 </html>
