--- a/templates/submit.html
+++ b/templates/submit.html
@@ -31,7 +31,7 @@ body {
 if there is no named corpse, or no corpse at all, include the smob name somewhere <code>smob: a tall thief</code> with the log of <code>get all</code><br>
 be sure to include the stuff you get from a pack or other container, or off the ground</p>
 
-<form action="/submit" method="post">
+<form action="/smobs/submit" method="post">
 <p><textarea autofocus name="smob" rows="32" cols="120" onkeydown="ctrl_enter(event);"></textarea></p>
 <p><button id="submit_button" value="recheck" name="button">submit</button><br>
 <small>or hit ctrl+enter</small></p>
