--- a/templates/submit_check.html
+++ b/templates/submit_check.html
@@ -36,7 +36,7 @@ th {
 {% endfor %}
 </table>
 
-<form action="/submit" method="post">
+<form action="/smobs/submit" method="post">
 <p><textarea autofocus name="smob" rows="32" cols="120">{{ data }}</textarea></p>
 <p><button id="recheck" value="recheck" name="button">recheck</button> <button id="submit" value="submit" name="button">submit</button></p>
 </form>
