--- a/templates/submit_error.html
+++ b/templates/submit_error.html
@@ -19,6 +19,8 @@ body {
 </head>
 <body>
 <p>there was an error with your datas</p>
+<p><a href="/smobs/submit">submit another</a></p>
+<p><a href="/smobs">back to smob db</a></p>
 <p><a href="/">back to the main page</a></p>
 
 </body>
