--- a/templates/smobs.html
+++ b/templates/smobs.html
@@ -20,7 +20,7 @@ function drawSmobTable() {
 	var data = google.visualization.arrayToDataTable([
 	['smob', 'shortname', 'location', 'stab', 'channel', 'pick', 'search', 'kills'],
 	{% for smob in smobs %}
-		['<a href="/smob/{{ smob[0] }}">{{ smob[1] }}</a>', '{% if smob[4] %}{{ smob[4] }}{% endif %}', '{%if smob[5] %}{{ smob[5] }}{% endif %}', '{% if smob[2] == True %}yes{% elif smob[2] == False %}no{% endif %}', '{% if smob[3] %}{{ smob[3] }}{% endif %}', '{% if smob[6] > 0 %}{{ smob[6] }}{% elif smob[6] == 0 %}none{% endif %}', '{% if smob[7] > 0 %}{{ smob[7] }}{% elif smob[7] == 0 %}none{% endif %}', {{ kills[smob[0]] }}],
+		['<a href="/smobs/{{ smob[0] }}">{{ smob[1] }}</a>', '{% if smob[4] %}{{ smob[4] }}{% endif %}', '{%if smob[5] %}{{ smob[5] }}{% endif %}', '{% if smob[2] == True %}yes{% elif smob[2] == False %}no{% endif %}', '{% if smob[3] %}{{ smob[3] }}{% endif %}', '{% if smob[6] > 0 %}{{ smob[6] }}{% elif smob[6] == 0 %}none{% endif %}', '{% if smob[7] > 0 %}{{ smob[7] }}{% elif smob[7] == 0 %}none{% endif %}', {{ kills[smob[0]] }}],
 	{% endfor %}
 	]);      
 	visualization = new google.visualization.Table(document.getElementById('smob_table'));
@@ -32,8 +32,8 @@ google.setOnLoadCallback(drawSmobTable);
 </head>
 <body>
 <h1>smob database</h1>
-<p><a href="/submit">contribute</a></p>
+<p><a href="/smobs/submit">contribute</a></p>
 <div id="smob_table"></div>
-<p><a href="https://github.com/rascul/smobs">open sores</a></p>
+<p><a href="/">back to main page</a></p>
 </body>
 </html>
