--- a/templates/eq.html
+++ b/templates/eq.html
@@ -15,10 +15,48 @@ as published by Sam Hocevar. See the COPYING file for more details.
 <body>
 <h1>eq database</h1>
 <ul>
-	<li><a href="/eq/clothing">clothing</a></li>
-	<li><a href="/eq/trinks">trinks</a></li>
-	<li><a href="/eq/weapons">weapons</a></li>
-	<li><a href="/eq/misc">misc</a></li>
+	<li>
+		<a href="/eq/armor">armor</a>
+		<ul>
+			<li><a href="/eq/armor/arms">arms</a></li>
+			<li><a href="/eq/armor/chest">chest</a></li>
+			<li><a href="/eq/armor/feet">feet</a></li>
+			<li><a href="/eq/armor/hands">hands</a></li>
+			<li><a href="/eq/armor/head">head</a></li>
+			<li><a href="/eq/armor/legs">legs</a></li>
+		</ul>
+	</li>
+	<li>
+		<a href="/eq/trinks">trinks</a>
+		<ul>
+			<li><a href="/eq/trinks/belt">belt</a></li>
+			<li><a href="/eq/trinks/bracelet">bracelet</a></li>
+			<li><a href="/eq/trinks/cloak">cloak</a></li>
+			<li><a href="/eq/trinks/necklace">necklace</a></li>
+			<li><a href="/eq/trinks/ring">ring</a></li>
+		</ul>
+	</li>
+	<li>
+		<a href="/eq/weapons">weapons</a>
+		<ul>
+			<li><a href="/eq/weapons/">axe</a></li>
+			<li><a href="/eq/weapons/">club</a></li>
+			<li><a href="/eq/weapons/">fencing blade</a></li>
+			<li><a href="/eq/weapons/">flail</a></li>
+			<li><a href="/eq/weapons/">javelin</a></li>
+			<li><a href="/eq/weapons/">lance</a></li>
+			<li><a href="/eq/weapons/">long blade</a></li>
+			<li><a href="/eq/weapons/">medium blade</a></li>
+			<li><a href="/eq/weapons/">polearm</a></li>
+			<li><a href="/eq/weapons/">projectile</a></li>
+			<li><a href="/eq/weapons/">short blade</a></li>
+			<li><a href="/eq/weapons/">spear</a></li>
+			<li><a href="/eq/weapons/">staff</a></li>
+		</ul>
+	</li>
+	<li>
+		<a href="/eq/misc">misc</a>
+	</li>
 </ul>
 
 <p><a href="/">back to main page</a></p>
