crapton of changes, updates, additions

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+{% block body %}
 
-<!--
-Copyright (C) 2013 Ray Schulz <rascul3@gmail.com>
-This work is free. You can redistribute it and/or modify it under the
-terms of the Do What The Fuck You Want To Public License, Version 2,
-as published by Sam Hocevar. See the COPYING file for more details. 
--->
+<p>this is the wotmud database</p>
 
-<head>
-<meta charset="utf-8">
-<title>wotmud database stuff</title>
-</head>
-<body>
-<h1>wotmud database stuff</h1>
-<p>no longer just for smobs</p>
-<ul>
-	<li><a href="/smobs">smobs</a></li>
-	<li><a href="/eq">eq</a></li>
-</ul>
-<p><a href="https://github.com/rascul/smobs">open sores</a></p>
+<p>coded by players, data submitted by players</p>
 
-</body>
-</html>
+<p><a href="http://wotmud.org">be a player</a></p>
+
+{% endblock %}
