--- a/templates/eq.html
+++ b/templates/eq.html
@@ -1,64 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<!--
-Copyright (C) 2013 Ray Schulz <rascul3@gmail.com>
-This work is free. You can redistribute it and/or modify it under the
-terms of the Do What The Fuck You Want To Public License, Version 2,
-as published by Sam Hocevar. See the COPYING file for more details. 
--->
-
-<head>
-<meta charset="utf-8">
-<title>eq database</title>
-</head>
-<body>
-<h1>eq database</h1>
-<ul>
-	<li>
-		<a href="/eq/armor">armor</a>
-		<ul>
-			<li><a href="/eq/armor/arms">arms</a></li>
-			<li><a href="/eq/armor/chest">chest</a></li>
-			<li><a href="/eq/armor/feet">feet</a></li>
-			<li><a href="/eq/armor/hands">hands</a></li>
-			<li><a href="/eq/armor/head">head</a></li>
-			<li><a href="/eq/armor/legs">legs</a></li>
-		</ul>
-	</li>
-	<li>
-		<a href="/eq/trinks">trinks</a>
-		<ul>
-			<li><a href="/eq/trinks/belt">belt</a></li>
-			<li><a href="/eq/trinks/bracelet">bracelet</a></li>
-			<li><a href="/eq/trinks/cloak">cloak</a></li>
-			<li><a href="/eq/trinks/necklace">necklace</a></li>
-			<li><a href="/eq/trinks/ring">ring</a></li>
-		</ul>
-	</li>
-	<li>
-		<a href="/eq/weapons">weapons</a>
-		<ul>
-			<li><a href="/eq/weapons/">axe</a></li>
-			<li><a href="/eq/weapons/">club</a></li>
-			<li><a href="/eq/weapons/">fencing blade</a></li>
-			<li><a href="/eq/weapons/">flail</a></li>
-			<li><a href="/eq/weapons/">javelin</a></li>
-			<li><a href="/eq/weapons/">lance</a></li>
-			<li><a href="/eq/weapons/">long blade</a></li>
-			<li><a href="/eq/weapons/">medium blade</a></li>
-			<li><a href="/eq/weapons/">polearm</a></li>
-			<li><a href="/eq/weapons/">projectile</a></li>
-			<li><a href="/eq/weapons/">short blade</a></li>
-			<li><a href="/eq/weapons/">spear</a></li>
-			<li><a href="/eq/weapons/">staff</a></li>
-		</ul>
-	</li>
-	<li>
-		<a href="/eq/misc">misc</a>
-	</li>
-</ul>
-
-<p><a href="/">back to main page</a></p>
-</body>
-</html>
+{% extends "base.html" %}
+{% block body %}
+<table class="sortable">
+	<tr>{% for i in range(descs|length) %}{% if descs[i][0] != 'itemid' %}<th><a href="#" onclick="return false;">{{ descs[i][0] }}</a></th>{% endif %}{% endfor %}</tr>
+	{% for item in items %}
+		<tr>{% for i in range(item|length) %}
+			{% if descs[i][0] == "name" %}
+				<td><a href="/eq/{{ item[1] }}">{{ item[0] }}</a></td>
+			{% elif descs[i][0] == "type" %}
+				<td><a href="/eq/{% if title != 'equipment' %}{{ title }}/{% endif %}{{ item[2] }}">{{ item[2] }}</a></td>
+			{% elif descs[i][0] != "itemid" %}
+				{% if item[i] is none %}
+					<td></td>
+				{% elif item[i]|string == '1.0' %}
+					<td>1</td>
+				{% elif item[i]|string == '2.0' %}
+					<td>2</td>
+				{% else %}
+					<td>{{ item[i] }}</td>
+				{% endif %}
+			{% endif %}
+		{% endfor %}</tr>
+	{% endfor %}
+</table>
+{% endblock %}
