--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,8 @@ as published by Sam Hocevar. See the COPYING file for more details.
             <li><a href="/eq/weapon">weapon</a></li>
         </ul>
     </li>
-    <li><a href="/smobs">smobs</a>
+    <li><a href="/smobs">smobs</a></li>
+    <li><a href="/quests">quests</a></li>
 </ul>
 </div>
 
