update stuff to use new templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@ as published by Sam Hocevar. See the COPYING file for more details.
     </li>
     <li><a href="/smobs">smobs</a></li>
     <li><a href="/quests">quests</a></li>
+    <li><a href="/links">links</a></li>
 </ul>
 </div>
 
