update links at top

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,9 +26,11 @@ as published by Sam Hocevar. See the COPYING file for more details.
             <li><a href="/eq/weapon">weapon</a></li>
         </ul>
     </li>
-    <li><a href="/smobs">smobs</a></li>
-    <li><a href="/quests">quests</a></li>
-    <li><a href="/links">links</a></li>
+    <li><a href="/smobs">smobs</a>
+		<ul>
+			<li><a href="/smobs/submit">contribute</a></li>
+		</ul>
+	</li>
 </ul>
 </div>
 
