add herm and potion links

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,8 @@ as published by Sam Hocevar. See the COPYING file for more details.
     <li><a href="/eq">eq</a>
         <ul>
             <li><a href="/eq/armor">armor</a></li>
+            <li><a href="/eq/herb">herb</a></li>
+            <li><a href="/eq/potion">potion</a></li>
             <li><a href="/eq/trink">trink</a></li>
             <li><a href="/eq/weapon">weapon</a></li>
         </ul>
