change none to nada for austin

--- a/templates/smob.html
+++ b/templates/smob.html
@@ -7,8 +7,8 @@
 <p><strong>kills:</strong> {{ kills }}</p>
 <p><strong>stab:</strong> {% if smob[2] == True %}yes{% elif smob[2] == False %}no{% else %}unknown{% endif %}</p>
 <p><strong>channel:</strong> {% if smob[3] %}{{ smob[3] }}{% endif %}</p>
-<p><strong>pick:</strong> {% if smob[6] > 0 %}{{ smob[6] }}{% elif smob[6] == 0 %}none{% endif %}</p>
-<p><strong>search:</strong> {% if smob[7] > 0 %}{{ smob[7] }}{% elif smob[7] == 0 %}none{% endif %}</p>
+<p><strong>pick:</strong> {% if smob[6] > 0 %}{{ smob[6] }}{% elif smob[6] == 0 %}nada{% endif %}</p>
+<p><strong>search:</strong> {% if smob[7] > 0 %}{{ smob[7] }}{% elif smob[7] == 0 %}nada{% endif %}</p>
 
 <table class="sortable">
 	<tr>
