add notes field to smobs

--- a/templates/smob_edit.html
+++ b/templates/smob_edit.html
@@ -61,6 +61,9 @@
 	</tr>
 </table>
 
+<p><strong>notes</strong><br>
+<textarea name="notes" rows=24 cols=100>{% if smob[8] %}{{ smob[8] }}{% endif %}</textarea></p>
+
 <input type="hidden" name="smobid" value="{{ smob[0] }}" readonly>
 <input type="hidden" name="name" value="{{ smob[1] }}" readonly>
 
