--- a/templates/smob.html
+++ b/templates/smob.html
@@ -3,12 +3,13 @@
 
 <p><a href="/smobs/edit/{{ smobid }}">edit this smob</a></p>
 
-<p><strong>location:</strong>{% if smob[5] %}{{ smob[5] }}{% endif %}</p>
+<p><strong>location:</strong>{% if smob[5] %}{{ smob[5] }}{% else %}unknown{% endif %}</p>
 <p><strong>kills:</strong> {{ kills }}</p>
 <p><strong>stab:</strong> {% if smob[2] == True %}yes{% elif smob[2] == False %}no{% else %}unknown{% endif %}</p>
-<p><strong>channel:</strong> {% if smob[3] %}{{ smob[3] }}{% endif %}</p>
-<p><strong>pick:</strong> {% if smob[6] > 0 %}{{ smob[6] }}{% elif smob[6] == 0 %}nada{% endif %}</p>
-<p><strong>search:</strong> {% if smob[7] > 0 %}{{ smob[7] }}{% elif smob[7] == 0 %}nada{% endif %}</p>
+<p><strong>channel:</strong> {% if smob[3] %}{{ smob[3] }}{% else %}unknown{% endif %}</p>
+<p><strong>pick:</strong> {% if smob[6] > 0 %}{{ smob[6] }}{% elif smob[6] == 0 %}nada{% else %}unknown{% endif %}</p>
+<p><strong>search:</strong> {% if smob[7] > 0 %}{{ smob[7] }}{% elif smob[7] == 0 %}nada{% else %}unknown{% endif %}</p>
+<p><strong>notes:</strong> {% if smob[8] %}<pre>{{ smob[8] }}</pre>{% else %}nada{% endif %}</p>
 
 <table class="sortable">
 	<tr>
