add placeholders for more eq type code

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,11 +21,18 @@ as published by Sam Hocevar. See the COPYING file for more details.
     <li><a href="/">db</a></li>
     <li><a href="/eq">eq</a>
         <ul>
-            <li><a href="/eq/armor">armor</a></li>
-            <li><a href="/eq/herb">herb</a></li>
-            <li><a href="/eq/potion">potion</a></li>
-            <li><a href="/eq/trink">trink</a></li>
-            <li><a href="/eq/weapon">weapon</a></li>
+			<li><a href="/eq/armor">armor</a></li>
+			<!--<li><a href="/eq/container">container</a></li>-->
+			<!--<li><a href="/eq/food">food</a></li>-->
+			<li><a href="/eq/herb">herb</a></li>
+			<!--<li><a href="/eq/horseeq">horseeq</a></li>-->
+			<!--<li><a href="/eq/key">key</a></li>-->
+			<!--<li><a href="/eq/light">light</a></li>-->
+			<!--<li><a href="/eq/misc">misc</a></li>-->
+			<!--<li><a href="/eq/money">money</a></li>-->
+			<li><a href="/eq/potion">potion</a></li>
+			<li><a href="/eq/trink">trink</a></li>
+			<li><a href="/eq/weapon">weapon</a></li>
         </ul>
     </li>
     <li><a href="/smobs">smobs</a>
